// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textReplace renders 0 1`] = `
Array [
  .c0 {
  text-replace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders function 1`] = `
Array [
  .c0 {
  text-replace: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders invalid theme path 1`] = `
Array [
  .c0 {
  text-replace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders negative number 1`] = `
Array [
  .c0 {
  text-replace: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-replace: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-replace: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-replace: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-replace: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-replace: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-replace: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-replace: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-replace: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-replace: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-replace: July;
  }
}

@media April {
  .c0 {
    text-replace: August;
  }
}

@media January {
  .c0 {
    text-replace: September;
  }
}

@media April {
  .c0 {
    text-replace: November;
  }
}

@media June {
  .c0 {
    text-replace: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-replace: July;
  }
}

@media April {
  .c0 {
    text-replace: August;
  }
}

@media January {
  .c0 {
    text-replace: September;
  }
}

@media April {
  .c0 {
    text-replace: November;
  }
}

@media June {
  .c0 {
    text-replace: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-replace: January;
  }
}

@media April {
  .c0 {
    text-replace: December;
  }
}

@media January {
  .c0 {
    text-replace: April;
  }
}

@media April {
  .c0 {
    text-replace: May;
  }
}

@media June {
  .c0 {
    text-replace: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-replace: January;
  }
}

@media April {
  .c0 {
    text-replace: December;
  }
}

@media January {
  .c0 {
    text-replace: April;
  }
}

@media April {
  .c0 {
    text-replace: May;
  }
}

@media June {
  .c0 {
    text-replace: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders postitive number 1`] = `
Array [
  .c0 {
  text-replace: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders string 1`] = `
Array [
  .c0 {
  text-replace: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textReplace renders valid theme path 1`] = `
Array [
  .c0 {
  text-replace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-replace: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
